--- a/index.html
+++ b/index.html
@@ -3,22 +3,29 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width initial-scale=1">
 	<title>Joey Thinkful : Software Engineer</title>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css" />
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-
 	<header>
-		<h1>Name</h1>
+		<div class ="group"> 
+		<div class ="item">
+		<h1>Nam Thinkful</h1>
+		</div>	
+		<div class = "item">
 		<nav>
 			<ul id="menu">
 				<li><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Portfolio</a></li>
 				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
+		</div> 
+	</div> 
 	</header>
 </body>
 
